--- a/templates/post.html
+++ b/templates/post.html
@@ -11,8 +11,8 @@
             <h1>View Customers Orders</h1>
             <h2 class="subheading">medical records</h2>
             <span class="meta">
-              <a href="#">AWESOME</a>
-             designed by ARK</span>
+              <a href="#"></a>
+            </span>
           </div>
         </div>
       </div>
